Fixed profile thumbnail flicker

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -225,6 +225,8 @@ hr {
 }
 
 .profile_thumbnail_wrapper {
+  border-radius: 50%;
+  overflow: hidden;
   margin-left: 50px;
 }
 
